--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,12 @@ members = [
 ]
 
 [dependencies]
-fudge = { git = "https://github.com/centrifuge/fudge", rev = "08ac34098c441aadd85b2338ba2f62e92d877ef7" }
+fudge = { git = "https://github.com/centrifuge/fudge", branch = "fix/pub-apis" }
 codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
 tracing = "0.1.3"
-tokio = { version = "1.15", features = ["macros"] }
+tokio = { version = "1.15", features = ["full"] }
 tracing-subscriber = "0.2"
+hex = "0.4.3"
 
 centrifuge-runtime = { git = "https://github.com/centrifuge/centrifuge-chain", rev = "45548ab71521720c68f1b9d59030704643a3725e" }
 test-parachain = { path = "test-parachain"}
@@ -67,6 +68,9 @@ frame-support = { git = "https://github.com/paritytech/substrate", branch = "pol
 pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
 pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
+pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
+pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
+pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
 
 # Polkadot dependencies
 polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29" }
