--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ members = [
 ]
 
 [dependencies]
-fudge = { git = "https://github.com/centrifuge/fudge", branch = "fix/pub-apis" }
+fudge = { git = "https://github.com/centrifuge/fudge", rev = "e610fb2180e8cfa74e28718600f2b284c1c34e5c" }
 codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
 tracing = "0.1.3"
 tokio = { version = "1.15", features = ["full"] }
